improve UI with images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ROCK PAPER SCISSORS</title>
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,9 +20,9 @@
     <p class="heading">ROCK, PAPER, SCISSORS</p>
     <div class="container">
         <div class="rpsBtn">
-            <button id="rock">Rock</button>
-            <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button>
+            <button id="rock"><img src="./images/rock.png"></button>
+            <button id="paper"><img src="./images/paper.png"></button>
+            <button id="scissors"><img src="./images/rock.png"></button>
         </div>
         <div class="score">
             Player: 0 Computer: 0
